Move version number to its own header and bump version to 3.00

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,6 +93,7 @@ set(Aperture_HDRS
     aperture/targetver.h
     aperture/TokenBucket.h
     aperture/Validator.h
+    aperture/Version.h
     aperture/WhipURI.h
     ${PROTO_HDRS}
     )
