--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,8 @@ install:
   - cmd: pip.exe install conan
   - cmd: conan user # Create the conan data directory
   - cmd: conan --version
-  - cmd: conan remote add slidewave https://api.bintray.com/conan/slidewavellc/conan-libs 
+  - cmd: conan remote add slidewave https://api.bintray.com/conan/slidewavellc/conan-libs
+  - cmd: conan remote add conan-community https://api.bintray.com/conan/conan-community/conan
 
 build_script:
   - cmd: mkdir build
