--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,13 @@ IF (NOT CMAKE_BUILD_TYPE)
 	"Build type. One of: Debug Release RelWithDebInfo" FORCE)
 ENDIF(NOT CMAKE_BUILD_TYPE)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-
+set(CMAKE_CXX_STANDARD 14)
 ucm_set_runtime(STATIC)
 
 include(conanbuildinfo.cmake)
 conan_basic_setup()
+
+ucm_print_flags()
 
 find_package(Threads REQUIRED)
 find_package(Protobuf REQUIRED)
