--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ platform:
 install:
   - cmd: echo "Downloading conan..."
   - cmd: set PATH=%PATH%;%PYTHON%/Scripts/
-  - cmd: pip.exe install conan
+  - cmd: pip.exe install conan --upgrade
   - cmd: conan user # Create the conan data directory
   - cmd: conan --version
   - cmd: conan remote add slidewave https://api.bintray.com/conan/slidewavellc/conan-libs
