--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
 
 build_script:
   - cmd: mkdir build
-  - cmd: conan install -s build_type=Release -s arch=x86_64 --build=missing
+  - cmd: conan install -s build_type=Release -s arch=x86_64 -s compiler.runtime=MT --build=missing
   - cmd: cd build
   - cmd: cmake ../ -DCMAKE_BUILD_TYPE=Release -G "Visual Studio 15 2017 Win64"
   - cmd: cmake --build . --config Release
