Add artifacts section to appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,3 +23,11 @@ build_script:
  #test_script:
  #  - cmd: cd bin
  #  - cmd: encryption_test.exe
+
+ artifacts:
+   - path: 'bin\aperture.exe'
+     name: "Aperture"
+     type: auto
+   - path: 'bin\aperture.pdb'
+     name: "Aperture Symbols"
+     type: auto
