--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,7 @@ before_install:
 compiler:
   - gcc
 install:
-  - pip install -user conan
+  - pip install --user conan
   - conan user
 script:
   - mkdir build
