--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,9 @@ install:
   - pip install --user conan
   - conan user
 script:
-  - conan install ../ -s build_type=Release --build=missing
-  - cmake ../ -DCMAKE_BUILD_TYPE=Release 
-  - cmake --build ../ --config Release
+  - pwd
+  - ls
+  - conan install . -s build_type=Release --build=missing
+  - cmake . -DCMAKE_BUILD_TYPE=Release 
+  - cmake --build . --config Release
 
