--- a/.travis.yml
+++ b/.travis.yml
@@ -78,9 +78,8 @@ compiler:
 install:
   - pip install --user conan
   - conan user
+  - conan remote add slidewave https://api.bintray.com/conan/slidewavellc/conan-libs
 script:
-  - pwd
-  - ls
   - conan install . -s build_type=Release --build=missing
   - cmake . -DCMAKE_BUILD_TYPE=Release 
   - cmake --build . --config Release
