--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ install:
   - cmd: conan user # Create the conan data directory
   - cmd: conan --version
   - cmd: conan remote add slidewave https://api.bintray.com/conan/slidewavellc/conan-libs
+  - cmd: conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
 
 build_script:
   - cmd: mkdir build
