--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,7 @@ install:
 - sh: sudo -H pip install conan --upgrade
 - conan user # Create the conan data directory
 - conan --version
-- conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan
+- conan remote add --force bincrafters https://api.bintray.com/conan/bincrafters/public-conan
 
 before_build:
 - ps: |
@@ -43,12 +43,12 @@ before_build:
     }
 
 build_script:
-- ps: New-Item -Name build -ErrorAction SilentlyContinue | Out-Null
+- ps: New-Item -Name build -ErrorAction SilentlyContinue
 - cmd: conan install . -s build_type=Release -s arch=x86_64 -s compiler.runtime=MT --build=missing
 - sh: conan install . -s build_type=Release -s arch=x86_64 --build=missing
 - cmd: cd build
 - sh: cd build
-- cmd: cmake ../ -DCMAKE_BUILD_TYPE=Release -G "Visual Studio 15 2017 Win64"
+- cmd: cmake ..\ -DCMAKE_BUILD_TYPE=Release -G "Visual Studio 15 2017 Win64"
 - sh: cmake ../ -DCMAKE_BUILD_TYPE=Release
 - cmake --build . --config Release
 
