--- a/appveyor.yml
+++ b/appveyor.yml
@@ -53,7 +53,7 @@ for:
     - image: Visual Studio 2017
   build_script:
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
-  - build.bat Release
+  - build.cmd Release
 -
   matrix:
     only:
