Some more minor build cleanup (Ubuntu is still broken)
But Ubuntu builds still fail because of at least one linker problem with boost.

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,9 @@
 *.out
 *.app
 
-# CMake build directory
+# CMake build directory and results folder
 build/
+bin/
 
 # Conan build files
 conanbuildinfo.*
